--- a/InfiniteMatrixStarter 5.5/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/InfiniteMatrixStarter 5.5/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -187,7 +187,7 @@ Advanced=False
 
 [DetailCustomWidgetExpansion]
 CameraComponent=CameraComponent.PostProcess.Lens
-StaticMeshComponent=StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup
+StaticMeshComponent=StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform
 BP_HealthPack_C=StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup
 PropertyWrapper=StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup
 BP_Tunnel_C=StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup
@@ -197,6 +197,12 @@ EdGraphNode_Comment=StaticMeshComponent.Materials.MaterialList,StaticMeshCompone
 BP_TunnelSpawner_C=StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup
 BP_Player_C=StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup
 EdGraph=StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup
+SceneComponent=StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup
+UsdMaterialAssetUserData=StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup
+K2Node_MacroInstance=StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup
+WBP_HurtScreen_C=StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup
+K2Node=StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup
+K2Node_CallFunction=StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup
 
 [EditorStartup]
 LastLevel=/Game/InfiniteMatrix/Maps/TutorialMap
@@ -204,6 +210,9 @@ LastLevel=/Game/InfiniteMatrix/Maps/TutorialMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -212,11 +221,11 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 OpenAssetsAtExit=/Game/InfiniteMatrix/Blueprints/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/InfiniteMatrix/UI/WBP_Health.WBP_Health
 OpenAssetsAtExit=/Game/InfiniteMatrix/Blueprints/BP_Tunnel.BP_Tunnel
 OpenAssetsAtExit=/Game/InfiniteMatrix/Blueprints/BP_HealthPack.BP_HealthPack
 OpenAssetsAtExit=/Game/InfiniteMatrix/Blueprints/BP_TunnelSpawner.BP_TunnelSpawner
 OpenAssetsAtExit=/Game/InfiniteMatrix/Blueprints/BP_Projectile.BP_Projectile
+OpenAssetsAtExit=/Game/InfiniteMatrix/Blueprints/BP_Enemy.BP_Enemy
 
 [DetailPropertyExpansion]
 BP_Tunnel_C=
@@ -239,6 +248,8 @@ Widget=
 Visual=
 RotatingMovementComponent="\"Object.RotatingComponent.RotationRate\" "
 MovementComponent=
+BP_Enemy_C="\"Object.Replication.ReplicatedMovement\" "
+Image="\"Object.Appearance.Brush\" "
 
 [DetailCategories]
 BP_Tunnel_C.TransformCommon=True
@@ -360,7 +371,7 @@ BP_Tunnel_C.ComponentReplication=True
 BP_Tunnel_C.Variable=True
 BP_Tunnel_C.Events=True
 StaticMeshComponent.Variable=True
-StaticMeshComponent.Sockets=True
+StaticMeshComponent.Sockets=False
 StaticMeshComponent.ComponentTick=True
 StaticMeshComponent.ComponentReplication=True
 StaticMeshComponent.Events=True
@@ -596,9 +607,50 @@ ProjectileMovementComponent.ComponentReplication=True
 ProjectileMovementComponent.Activation=True
 ProjectileMovementComponent.Cooking=True
 ProjectileMovementComponent.Events=True
+BP_Enemy_C.Tick=True
+BP_Enemy_C.Replication=True
+BP_Enemy_C.Rendering=True
+BP_Enemy_C.Collision=True
+BP_Enemy_C.Actor=True
+BP_Enemy_C.Input=True
+BP_Enemy_C.HLOD=True
+BP_Enemy_C.Physics=True
+BP_Enemy_C.Events=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.NaniteSettings=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Rendering=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+WBP_HurtScreen_C.Appearance=True
+WBP_HurtScreen_C.Input=True
+WBP_HurtScreen_C.Interaction=True
+WBP_HurtScreen_C.Designer=True
+WBP_HurtScreen_C.Performance=True
+WBP_HurtScreen_C.Layout=True
+WBP_HurtScreen_C.Behavior=True
+WBP_HurtScreen_C.Render Transform=True
+WBP_HurtScreen_C.Localization=True
+WBP_HurtScreen_C.Accessibility=True
+WBP_HurtScreen_C.Rendering=True
+WBP_HurtScreen_C.Navigation=True
 
 [ContentBrowser]
-ContentBrowserDrawer.SelectedPaths=/Game/InfiniteMatrix/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/InfiniteMatrix/UI
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
@@ -620,8 +672,9 @@ ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
-ContentBrowserDrawer.JumpMRU=/All/Game/InfiniteMatrix/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/InfiniteMatrix/UI
+ContentBrowserDrawer.JumpMRU=/All/EngineData/Engine/BasicShapes
+ContentBrowserDrawer.JumpMRU=/All/Game/InfiniteMatrix/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/InfiniteMatrix/Maps
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
@@ -634,14 +687,17 @@ GlobalAssetPicker.CurrentViewType=0
 GlobalAssetPicker.ZoomScale=0
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/InfiniteMatrix/Blueprints/BP_Projectile
-MRUItem1=/Game/InfiniteMatrix/Blueprints/BP_Tunnel
-MRUItem2=/Game/InfiniteMatrix/Blueprints/BP_TunnelSpawner
-MRUItem3=/Game/InfiniteMatrix/UI/WBP_Health
-MRUItem4=/Game/InfiniteMatrix/Blueprints/BP_Player
-MRUItem5=/Game/InfiniteMatrix/Blueprints/BP_HealthPack
-MRUItem6=/Game/InfiniteMatrix/UI/WBP_Score
-MRUItem7=/Game/InfiniteMatrix/UI/WBP_Restart
+MRUItem0=/Game/InfiniteMatrix/UI/WBP_HurtScreen
+MRUItem1=/Engine/BasicShapes/Cube
+MRUItem2=/Game/InfiniteMatrix/Blueprints/BP_Enemy
+MRUItem3=/Game/InfiniteMatrix/Blueprints/BP_Projectile
+MRUItem4=/Game/InfiniteMatrix/Blueprints/BP_Tunnel
+MRUItem5=/Game/InfiniteMatrix/Blueprints/BP_TunnelSpawner
+MRUItem6=/Game/InfiniteMatrix/UI/WBP_Health
+MRUItem7=/Game/InfiniteMatrix/Blueprints/BP_Player
+MRUItem8=/Game/InfiniteMatrix/Blueprints/BP_HealthPack
+MRUItem9=/Game/InfiniteMatrix/UI/WBP_Score
+MRUItem10=/Game/InfiniteMatrix/UI/WBP_Restart
 
 [DetailCategoriesAdvanced]
 PropertyWrapper.Variable=False
@@ -711,6 +767,7 @@ GraphEditorQuickJumps=()
 /Game/InfiniteMatrix/UI/WBP_Restart.WBP_Restart=1
 /Game/InfiniteMatrix/UI/WBP_Health.WBP_Health=1
 /Game/InfiniteMatrix/UI/WBP_Score.WBP_Score=1
+/Engine/BasicShapes/Cube.Cube=1
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2023,7 +2080,7 @@ LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.5/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
